--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/action_settings"
-    tools:context="test.com.other2.MainActivity"
+    tools:context="com.demo.MainActivity"
     tools:showIn="@layout/activity_main">
 
     <TextView
